# raudit

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE  README.md  justfile
.github/workflows/: release.yml  rust.yml  rust_security.yml
report/: .gitignore  README.md  report.py  template.html.jinja
src/: apparmor.rs  apt.rs  audit.rs  base.rs  bin.rs  check.rs  clamav.rs  cli.rs  config.rs  consts.rs  docker.rs  gdm.rs  group.rs  grub.rs  hosts.rs  kconfig.rs  kernel.rs  logger.rs  login_defs.rs  main.old.rs  main.rs  malloc.rs  modprobe.rs  mount.rs  nginx.rs  ocsf.rs  os.rs  pam.rs  podman.rs  ps.rs  shell.rs  sshd.rs  sudo.rs  sysctl.rs  systemd.rs  uptime.rs  users.rs  utils.rs
src/check/: execution.rs  filter.rs  mod.rs  output.rs  types.rs
src/modules/: base.rs  bin.rs  clamav.rs  docker.rs  group.rs  grub.rs  kconfig.rs  login_defs.rs  malloc.rs  mod.rs  modprobe.rs  nginx.rs  os.rs  pam.rs  podman.rs  ps.rs  shell.rs  sshd.rs  sysctl.rs  systemd.rs  uptime.rs  users.rs
src/rules/: apparmor.rs  apt.rs  audit.rs  bin.rs  clamav.rs  cron.rs  docker.rs  exploit.rs  gdm.rs  group.rs  grub.rs  hosts.rs  kernel.rs  kernel_params.rs  login_defs.rs  malloc.rs  mod.rs  modprobe.rs  mount.rs  nginx.rs  pam.rs  podman.rs  shell.rs  sshd.rs  sudo.rs  sysctl.rs  system.rs  systemd.rs  uptime.rs  user.rs
tests/: README.md  compare.py  raudit-test-ubuntu-base.json  raudit-test-ubuntu-hardened.json  ubuntu-base.Containerfile  ubuntu-hardened.Containerfile
tests/ubuntu/: login.defs
tests/ubuntu/apt/: 90-autoclean  90-hardening  90-unattended-upgrade
tests/ubuntu/sysctl/: 00-kernel.conf  10-fs.conf  50-ipv4.conf  50-ipv6.conf
