[package]
name = "raudit"
version = "0.19.0"
edition = "2021"
authors = ["deoktr"]
license = "GPLv3"
description = "Linux security audit tool"
readme = "README.md"
homepage = "https://github.com/deoktr/raudit"
repository = "https://github.com/deoktr/raudit"
keywords = ["security", "audit", "linux", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
once_cell = "1.21.3"
rayon = "1.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
